Fixed some erros regarding the spacing on the right side

--- a/style.css
+++ b/style.css
@@ -709,11 +709,7 @@ h2 {
 
     h1 {
         font-size: 24px;
-        padding:0;
-        margin-bottom:0;
     }
-
-
 }
 
 
